greeting has animation now

--- a/styles/main.css
+++ b/styles/main.css
@@ -31,3 +31,27 @@ body {
 .active {
     background-color: #006BB3
 }
+
+.greeting {
+    position: relative;
+    text-align: center;
+    top: 150px;
+}
+
+.greet-hello {
+    opacity: 0%;
+    position: relative;
+    animation-name: fadeIn;
+    animation-duration: 1.8s;
+    animation-delay: 0.5s;
+    animation-fill-mode: forwards;
+}
+
+.greet-position {
+    opacity: 0%;
+    position: relative;
+    animation-name: fadeIn;
+    animation-duration: 1s;
+    animation-delay: 1.5s;
+    animation-fill-mode: forwards;
+}
