--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,6 @@
 * {
     font-family: 'Roboto', sans-serif;
+    overflow-wrap: break-word;
 }
 
 body {
@@ -86,7 +87,6 @@ body {
     position: relative;
     top: 80vh;
     left: 20vw;
-    overflow-wrap: break-word;
     max-width: 70vw;
 }
 
@@ -97,4 +97,36 @@ body {
 
 .about-desc {
     font-size: 25px;
+}
+
+.projects {
+    position: relative;
+    top: 150vh;
+    left: 20vw;
+    max-width: 70vw;
+}
+
+.projects-title {
+    text-decoration: solid underline #31383F; 
+}
+
+.projects-list-item {
+    position: relative;
+    margin-top: 50px;
+}
+
+.projects-desc {
+    position: relative;
+    margin-top: 10px;
+    font-size: 18px;
+}
+
+.projects-picture {
+    position: relative;
+    width: 70%;
+    left: 20vw;
+}
+
+.live-link:hover {
+    text-decoration: none;
 }
