--- a/styles/main.css
+++ b/styles/main.css
@@ -130,3 +130,30 @@ body {
 .live-link:hover {
     text-decoration: none;
 }
+
+.contact {
+    position: relative;
+    top: 180vh;
+    left: 20vw;
+    margin-bottom: 20px;
+}
+
+.contact-title {
+    text-decoration: solid underline #31383F; 
+}
+
+.contact-fields {
+    margin-top: 20px;
+}
+
+.contact-input {
+    font-size: 30px;
+    background-color: #FFFFE6;
+    display: block;
+    margin-top: 10px;
+}
+
+.contact-input-button {
+    font-size: 20px;
+    margin-top: 10px;
+}
