Added github repo links and login info

--- a/styles/main.css
+++ b/styles/main.css
@@ -82,7 +82,7 @@ body {
     top: 110vh;
     left: 20vw;
     background-color: #30F080;
-    margin-left: -310px;
+    margin-left: -20vw;
     padding-top: 10vh;
     padding-bottom: 10vh;
 }
