--- a/styles/main.css
+++ b/styles/main.css
@@ -1,11 +1,13 @@
 * {
     font-family: 'Roboto', sans-serif;
     overflow-wrap: break-word;
+    overflow-x: hidden;
 }
 
 body {
     min-height: 100vh;
     overflow-x: hidden;
+    overflow-y:hidden;
 }
 
 .nav {
