--- a/styles/main.css
+++ b/styles/main.css
@@ -78,6 +78,28 @@ body {
     margin-left: 20vw;
 }
 
+.skill {
+    font-size: 18px;
+    height: 10px;
+}
+
+.skills-grid {
+    display: grid;
+    position: relative;
+    grid-template-columns: 300px 600px;
+    column-gap: 60px;
+}
+
+.languages {
+    border-right: 4px #f5f5f5 solid;
+    border-radius: 3px;
+}
+
+.frameworks {
+    display: grid;
+    grid-template-columns: 300px 300px;
+}
+
 .skills-container {
     position: relative;
     top: 110vh;
