--- a/styles/main.css
+++ b/styles/main.css
@@ -4,14 +4,16 @@
 }
 
 .mobile {
+    position: relative;
     overflow-x: hidden;
+    overflow-y: scroll;
+    height: 100vh;
 }
 
 body {
-    min-height: 100vh;
-    overflow-x: hidden;
-    overflow-y:scroll;
     max-width: 100%;
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 .nav {
@@ -58,7 +60,7 @@ body {
     animation-delay: 0.5s;
     animation-fill-mode: forwards;
     min-width: 20%;
-    height: 10%
+    height: 20%
 }
 
 .greet-hello {
